--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           <div class="row">
             <div class="right-content">
               <div class="container">
-                <form id="contact" action="" method="post">
+                <form id="contact" action="https://fabform.io/f/lVPTp5J" method="post">
                   <div class="row">
                     <div class="col-md-6">
                       <fieldset>
@@ -337,7 +337,7 @@
                       <fieldset>
                         <input
                           name="email"
-                          type="text"
+                          type="email"
                           class="form-control"
                           id="email"
                           placeholder="Your email..."
